# Deep-agent-blueprint

./: .env.example  BLUEPRINT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py  errors.py  main.py
app/adapters/: __init__.py  base.py  jira.py  websearch.py
app/agent/: __init__.py  factory.py  prompts.py
app/api/: __init__.py  execute.py  health.py  research.py
app/auth/: __init__.py  api_key.py  user_token.py
app/llm/: __init__.py  azure.py
app/models/: __init__.py  schemas.py
app/observability/: __init__.py  correlation.py  logging.py
app/state/: __init__.py  queue.py  redis_store.py  token_vault.py
app/worker/: __init__.py  main.py  runner.py
docs/adr/: 0001-async-queue-over-sync-research.md  0002-deterministic-execute.md  0003-no-cross-boundary-resume.md  0004-auth-mode-model.md  0005-keyvault-token-staging-exception.md  0006-harness-swappability.md
scripts/: new_domain.py
tests/contract/: cases.py  conftest.py  test_api_contract.py  test_auth.py  test_correlation.py  test_execute.py  test_job_lifecycle.py  test_performance_seams.py  test_token_security.py
tests/unit/: conftest.py  test_api_key.py  test_jira_adapter.py  test_logging.py  test_read_concurrency.py  test_runner_parsing.py  test_state_machine.py  test_token_vault.py  test_websearch_adapter.py
